chore: remove test_connection.py

--- a/API_PRE_REGISTRO/requirements.txt
+++ b/API_PRE_REGISTRO/requirements.txt
@@ -1,7 +1,13 @@
 fastapi 
 redis-om
-uvicorn 
+uvicorn[standard]
 # "fastapi[standard]"
 requests 
 pymongo
 pydantic-settings 
+python-dotenv
+motor
+
+
+
+
